# Email-triage-env

./: .gitignore  Dockerfile  README.md  app.py  dashboard.py  environment.py  gmail_fetcher.py  inference.py  inference_gmail.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py
tasks/: task1_easy.py  task2_medium.py  task3_hard.py
